# swift-play-experimental

./: .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  NOTICE.txt  Package.swift  README.md
Sources/: CMakeLists.txt
Sources/PlaygroundMacros/: CMakeLists.txt  PlaygroundMacro.swift  PlaygroundMacrosMain.swift
Sources/Playgrounds/: CMakeLists.txt  Playgrounds.swift
Sources/Playgrounds/Discoverable/: PlaygroundContent+Discoverable.swift  PlaygroundContent+Hashable.swift  PlaygroundContent.swift
Sources/Playgrounds/ToolsAPI/: Playground.swift
Sources/Playgrounds/ToolsAPI/EntryPoints/: SwiftPMEntryPoint.swift
Tests/PlaygroundMacrosTests/: PlaygroundMacroExpansionTests.swift
Tests/PlaygroundsTests/: PlaygroundsToolsAPITests.swift
cmake/modules/: LibraryVersion.cmake  PlatformInfo.cmake  SwiftModuleInstallation.cmake  TargetTriple.cmake
cmake/modules/shared/: AvailabilityDefinitions.cmake  CompilerSettings.cmake
